--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>index.html</h1>
+    <p class="myparagraph">thomas is so cool</p>
 
     <script src="source/js/index.js"></script>
 </body>
